--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,3 +230,15 @@ footer {
 
 }
 
+/* Gallery */
+#photos {
+    clear: both;
+    line-height: 0;
+    column-count: 4;
+    column-gap: 0;
+}
+
+#photos > img {
+width: 100%;
+}
+
